--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,11 +40,11 @@ stages:
             az bicep build --files SimpleWithManagedIdentities/VanillaDeployment.bicep
 
       - task: AzureResourceManagerTemplateDeployment@3
-        displayName: 'Validate APIM Templates'
+        displayName: 'Validate ARM Templates'
         inputs:
           azureResourceManagerConnection: 'Azure'
           subscriptionId: '92dba6c6-2cf8-46ad-9d75-8674f0f66b9a'
           resourceGroupName: 'testing'
           location: 'Australia East'
           csmFile: SimpleWithManagedIdentities/VanillaDeployment.json
-          deploymentMode: 'Incremental'
+          deploymentMode: Validation
