--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,3 +48,13 @@ stages:
           location: 'Australia East'
           csmFile: SimpleWithManagedIdentities/VanillaDeployment.json
           deploymentMode: Validation
+
+      - task: AzureResourceManagerTemplateDeployment@3
+        displayName: 'Deploy ARM Templates'
+        inputs:
+          azureResourceManagerConnection: 'Azure'
+          subscriptionId: '92dba6c6-2cf8-46ad-9d75-8674f0f66b9a'
+          resourceGroupName: 'testing'
+          location: 'Australia East'
+          csmFile: SimpleWithManagedIdentities/VanillaDeployment.json
+          deploymentMode: Incremental
