Let's not be demanding on the build agent. Anything should work:-)

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,8 @@ trigger:
     include:
       - main
 
-pool:
-  vmImage: 'windows-latest'
+#pool:
+#  vmImage: 'windows-latest'
 
 variables:
   - name: bicep_filepath
