--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ stages:
         displayName: Build ARM Template from bicep file
         inputs:
           azureSubscription: 'Azure'
-          scriptType: bash
+          scriptType: ps
           scriptLocation: inlineScript
           inlineScript: |
             az --version
