Deploy an Azure Functions on Consumption Plan

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *.v2
 AzureIdentityDemo/.vs/AzureIdentityDemo/v16/.suo
 AzureIdentityDemo/.vs/AzureIdentityDemo/config/applicationhost.config
+AzureIdentityDemo/.vs/AzureIdentityDemo/v16/TestStore/0/000.testlog
+AzureIdentityDemo/.vs/AzureIdentityDemo/v16/TestStore/0/testlog.manifest
