Time to deploy some actual code

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,10 +8,14 @@ pool:
 #  vmImage: 'windows-latest'
 
 variables:
+  - name: subscription_name
+    value: 'Azure'
   - name: bicep_filepath
     value: 'SimpleWithManagedIdentities/VanillaDeployment.bicep'
   - name: arm_template_filepath
     value: '$(Pipeline.Workspace)/BicepArtifacts/services.json'
+  - name: app_name
+    value: 'identitydemo-123654'
 
 stages:
 - stage: Compile_Bicep
@@ -24,7 +28,7 @@ stages:
       - task: AzureCLI@2
         displayName: Build ARM Template from bicep file
         inputs:
-          azureSubscription: 'Azure'
+          azureSubscription: '${{variables.subscription_name}}'
           scriptType: ps
           scriptLocation: inlineScript
           inlineScript: |
@@ -39,4 +43,31 @@ stages:
           resourceGroupName: 'testing'
           location: 'Australia East'
           csmFile: SimpleWithManagedIdentities/VanillaDeployment.json
+          csmParametersFile: SimpleWithManagedIdentities/VanillaDeploymentParameters.json
           deploymentMode: Incremental
+      
+      - task: DotNetCoreCLI@2
+        displayName: build
+        inputs:
+          command: 'build'
+          projects: AzureIdentityDemo/AzureIdentityDemo.sln
+          arguments: --output $(System.DefaultWorkingDirectory)/published_backend --configuration Release
+
+      - task: ArchiveFiles@2
+        displayName: 'Archive API artifact files'
+        inputs:
+          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/published_backend'
+          includeRootFolder: false
+          archiveType: zip
+          archiveFile: $(Build.ArtifactStagingDirectory)/api.${{parameters.BuildId}}.zip
+          replaceExistingArchive: true
+
+      -task: AzureFunctionApp@1
+        displayName: 'Azure functions App deploy'
+        inputs:
+          azureSubscription: '${{variables.subscription_name}}'
+          appType: 'functionApp'
+          appName: '${{variables.app_name}}'
+          package: $(Build.ArtifactStagingDirectory)/api.${{parameters.BuildId}}.zip 
+          deploymentMethod: 'runFromPackage'
+
