Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,8 @@ stages:
           deploymentMode: Incremental
           
   - job: AzureFunction
+    dependsOn: 
+    - Bicep
     steps:      
       - task: DotNetCoreCLI@2
         displayName: build
