--- a/AzureIdentityDemo/AzureIdentityDemo/AzureIdentityDemo.csproj
+++ b/AzureIdentityDemo/AzureIdentityDemo/AzureIdentityDemo.csproj
@@ -4,7 +4,11 @@
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.4.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.19.0-preview" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.EventHubs" Version="5.0.0-beta.4" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.0.0-beta.2" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.0.0-beta.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="4.4.0" />
     <PackageReference Include="Microsoft.FeatureManagement" Version="2.3.0" />
